--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
         - to settle the PAUSE indexer.
     - Convert t/01require.t to Test::More and strict/warnings.
     - Convert t/02default.t to Test::More and strict/warnings.
+    - Add "use warnings;" to t/03catchsmry.t .
 
 0.03  Sun 14 Oct 11:03:52 IST 2012
     - Moved test.pl under examples so it won't interfere with the building
