--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.05  Fri 31 Jan 19:35:34 IST 2014
+    - Minimum version of perl (CPANTS).
+
 0.04  Mon  3 Jun 17:38:17 IDT 2013
     - Add an explicit version to Term::Shell::OnScopeLeave.
         - to settle the PAUSE indexer.
