--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.06  Thu 10 Apr 15:25:21 IDT 2014
+    - Consistent versioning (CPANTS).
+
 0.05  Fri 31 Jan 19:35:34 IST 2014
     - Minimum version of perl (CPANTS).
     - Add a LICENSE file (CPANTS).
