--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.07    2015-12-30
+    - Convert to Dist-Zilla.
+    - Add scripts/tag-release.pl
+    - Skip a failing test file ( t/03catchsmry.t ) on Windows:
+        - https://rt.cpan.org/Ticket/Display.html?id=40771
+        - https://rt.cpan.org/Ticket/Display.html?id=110555
+
 0.06    2014-04-10
     - Consistent versioning (CPANTS).
 
