--- a/Changes
+++ b/Changes
@@ -1,3 +1,12 @@
+0.08    2016-04-13
+    - Remove stray Build/_build artifacts from the distribution:
+        - https://rt.cpan.org/Ticket/Display.html?id=113730
+        - Thanks to KENTNL
+    - Fix the link to the bugtracker, add META.json, and supply a meta-data
+    "Provides" section.
+        - https://rt.cpan.org/Ticket/Display.html?id=113731
+        - Thanks to KENTNL
+
 0.07    2015-12-30
     - Convert to Dist-Zilla.
     - Add scripts/tag-release.pl
